--- a/index.html
+++ b/index.html
@@ -7,45 +7,99 @@
     <title>learning website</title>
 </head>
 <body>
-    <nav>
-        <!--Ich möchte hier ein Bild vom Logo zuerst-->
+
+<nav> <!--Navigationsleiste, das bild kommt mit in die Liste und Sign in ist auch ein Link, der in CSS Später 
+    modeliert werden kann, so dass er wie ein Button aussieht-->
+      <ul>
+         <!--Ich möchte hier ein Bild vom Logo zuerst-->
         <img src="Logo.html" alt="Logo von Beast Learning">
-<ul>
-    <li><a href="#Home.html">Home</a></li>
-    <li><a href="Aboutus.html">About Us</a></li>
-    <li><a href="Courses.html">Courses</a></li>
-    <li><a href="Appareniships.html">Appareniships</a></li>
-    <li><a href="More.html">More</a></li>
-    <button type="button">Sign In</button><!--über Achor Element den Linkt einbinden und dann später im CSS Stylen-->
-</ul>
-    </nav>
+        <li><a href="#Home.html">Home</a></li>
+        <li><a href="Aboutus.html">About Us</a></li>
+        <li><a href="Courses.html">Courses</a></li>
+        <li><a href="Appareniships.html">Appareniships</a></li>
+        <li><a href="More.html">More</a></li>
+        <li><a href="linksignup.html">Sign up</a></li>
+    </ul>
+</nav>
 
 <main>
-<h3>Training to succeed</h3>
-<h1>Belive and you can achieve</h1>
-<p>Learn any skill from comfort of your home Anywhere and Anytime for only 10 Dollar</p>
-<button type="button">Apply Now </button> <!--über Achor Element den Linkt einbinden und dann später im CSS Stylen-->
+        <p>Training to succeed</p>
+    <h1>Belive and you can achieve</h1>
+        <p>Learn any skill from comfort of your home Anywhere and Anytime for only 10 Dollar</p>
+        <a href="link Apply now.html">Apply Now</a>
 
 <!--2ter Abschnitt; Übereinandergelegte Bilder und rechts daneben Text mit nem Link zu read more-->
-<img src="https://source.unsplash.com/random" width = 100 height=50 alt="screenshot aus der app">
-<img src="https://source.unsplash.com/random" width = 100 height=50 alt="Teacher statistiks">
-<img src="https://source.unsplash.com/random" width = 100 height=50 alt="Congratulations">
-<h2>Get the Best Class by the Best Teachers</h2>
-<p>Get your... lore Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore </p>
-<button type="button">Read more</button> <!--über Achor Element den Linkt einbinden und dann später im CSS Stylen-->
+        <img src="https://images.unsplash.com/photo-1632821672116-2b1f9995cc95?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=764&q=80" width = 100 alt="screenshot aus der app">
+        <img src="https://images.unsplash.com/photo-1632840423797-70abb491e99e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=687&q=80" width = 100 alt="Teacher statistiks">
+        <img src="https://images.unsplash.com/photo-1632770152845-a955c743c887?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwzMnx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" width = 100 alt="Congratulations">
+    <h3>Get the Best Class by the Best Teachers</h3>
+                <p>Get your... lore Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore </p>
+        <a href="linkreadmore.html">Read more</a>
+
 
 <!--3 elemente nebeneinander, jedes ein bild, eine Überschrift und ein Text-->
 <ul>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>
+        <img src="https://images.unsplash.com/photo-1632572380371-8f30a8a8c020?ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDl8eGpQUjRobGtCR0F8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Bild experienced Teacher" width= 100>
+        <h4>Expierienced Teacher</h4>
+        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+    </li>
+    <li>
+        <img src="https://images.unsplash.com/photo-1594900543396-760a9add24ee?ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDE0fHhqUFI0aGxrQkdBfHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Bild experienced Teacher" width= 100>
+        <h4>Expierienced Teacher</h4>
+        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+        </li>
+    <li>
+        <img src="https://images.unsplash.com/photo-1611162458324-aae1eb4129a4?ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDIzfHhqUFI0aGxrQkdBfHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Bild experienced Teacher" width= 100>
+        <h4>Expierienced Teacher</h4>
+        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+        </li>
 
 </ul>
+ 
+<!--nächster Abschnitt:
+Eine Überschrift mit textt drunter, darunter 3 bilder mit Links-->
+    <h3>Featured Courses</h3>
+        <p>Everything you need when youre looking</p>
+    <ul>
+        <li>
+            <img src="https://images.unsplash.com/photo-1573495804660-b6b271f4c3f1?ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDN8YWV1NnJMLWo2ZXd8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Frau am PC" width="200">
+        </li>
+
+        <li>
+            <img src="https://images.unsplash.com/photo-1533906966484-a9c978a3f090?ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDExfGFldTZyTC1qNmV3fHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Laptop mit Smartphone auf Tisch" width="200">
+        </li>
+
+        <li>
+            <img src="https://images.unsplash.com/photo-1573164713605-61f736e04261?ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDM2fGFldTZyTC1qNmV3fHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Blaue Laptops" width="200">
+        </li>
+    </ul>
+
+<!--vorletzter Abschnitt. eine große Überschrift, drüber und drunter etwas Text, ein link zum free trail und daneben ein Bild für die Stimmung-->
+        <p>Simple learning plattform</p>   
+<h2>A qulity place for distance learning</h2>
+        <p>A best and cheapest way of know learning to make a better tomorrow</p>
+        <a href="link.html">Start free Trail</a>
+            <aside><img src="https://images.unsplash.com/photo-1619517934704-1613baa38c29?ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDEyfHRvd0paRnNrcEdnfHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Mann in SW" width="100"></aside>
+
+<!--letzter Abschnitt: blauer Katen, drauf eine Überschrift mit Text drüber, drunter ein Formular zum Email Newsletter. Daneben ein Dialogfenster mit 2 Dialogen und einem Bild als Absender-->
+        <p>Newsletter</p>
+    <h3>Subscribe Our Newsletter</h3>
+    <!--Ein Formblatt mit schrift drinnen und einem Submitt Button-->
+
+    <input type="email" placeholder="entre yout mail">
+            
+
+
+        <p>Why should I need your newsletter?</p>
+        <p>Because bls bla blubb some text here</p>
+<!--wie mache ich den Kasten und die schrift, und was ist das "Write message"? ein Bild?-->
+
 
 
 </main>
 
 
-   ><footer></footer> 
+   <footer></footer> 
 </body>
 </html>
