--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <li><a href="Courses.html">Courses</a></li>
         <li><a href="Appareniships.html">Appareniships</a></li>
         <li><a href="More.html">More</a></li>
-        <li><a href="linksignup.html">Sign up</a></li>
+        <li><a href="linksignup.html">Sign in</a></li>
+        <li><a href="Login.html"> Login</a></li>
     </ul>
 </nav>
 
@@ -77,7 +78,7 @@ Eine Überschrift mit textt drunter, darunter 3 bilder mit Links-->
 
 <!--vorletzter Abschnitt. eine große Überschrift, drüber und drunter etwas Text, ein link zum free trail und daneben ein Bild für die Stimmung-->
         <p>Simple learning plattform</p>   
-<h2>A qulity place for distance learning</h2>
+<h2>A quality place for distance learning</h2>
         <p>A best and cheapest way of know learning to make a better tomorrow</p>
         <a href="link.html">Start free Trail</a>
             <aside><img src="https://images.unsplash.com/photo-1619517934704-1613baa38c29?ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDEyfHRvd0paRnNrcEdnfHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Mann in SW" width="100"></aside>
