--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
     </nav>
 </header>
 
+
 <main>
-        <p>Training to succeed</p>
+        <small>Training to succeed</small>
         <h2>Belive and you can achieve</h2>
         <p>Learn any skill from comfort of your home Anywhere and Anytime for only 10 Dollar</p>
         <a href="link Apply now.html">Apply Now</a>
