Use span instead of p

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 </header>
 
 <main>
-        <p>Training to succeed</p>
+        <span>Training to succeed</span>
         <h2>Belive and you can achieve</h2>
-        <p>Learn any skill from comfort of your home Anywhere and Anytime for only 10 Dollar</p>
+        <span>Learn any skill from comfort of your home Anywhere and Anytime for only 10 Dollar</span> 
         <a href="link Apply now.html">Apply Now</a>
 
    
@@ -34,7 +34,7 @@
         <img src="https://images.unsplash.com/photo-1632840423797-70abb491e99e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=687&q=80" width = 100 alt="Teacher statistiks">
         <img src="https://images.unsplash.com/photo-1632770152845-a955c743c887?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwzMnx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" width = 100 alt="Congratulations">
         <h2>Get the Best Class by the Best Teachers</h2>
-        <p>Get your... lore Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore </p>
+         <p>Get your... lore Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore </p>
         <a href="linkreadmore.html">Read more</a>
 
 
@@ -61,7 +61,7 @@
     
 
         <h2>Featured Courses</h2>
-        <p>Everything you need when youre looking</p>
+        <span>Everything you need when youre looking</span>
         <ul>
             <li>
                 <img src="https://images.unsplash.com/photo-1573495804660-b6b271f4c3f1?ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDN8YWV1NnJMLWo2ZXd8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Frau am PC" width="200">
@@ -110,7 +110,7 @@
         </ul>
 
    
-        <p>Simple learning plattform</p>   
+        <span>Simple learning plattform</span>   
         <h2>A quality place for distance learning</h2>
         <p>A best and cheapest way of know learning to make a better tomorrow</p>
         <a href="link.html">Start free Trail</a>
